rust/crates/ccusage/tests/snapshots/copilot_cli__focused_daily_json.snap
---
source: crates/ccusage/tests/copilot_cli.rs
expression: "format!(\"Daily JSON\\n{}\", run_cli(&fixture, [\"copilot\", \"daily\", \"--json\"]),)"
---
Daily JSON
{
  "daily": [
    {
      "cacheCreationTokens": 20,
      "cacheReadTokens": 10,
      "date": "2026-01-02",
      "inputTokens": 70,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 20,
          "cacheReadTokens": 10,
          "cost": 0.00173,
          "inputTokens": 70,
          "modelName": "claude-opus-4.6",
          "outputTokens": 50
        }
      ],
      "modelsUsed": [
        "claude-opus-4.6"
      ],
      "outputTokens": 50,
      "totalCost": 0.00173,
      "totalTokens": 150
    },
    {
      "cacheCreationTokens": 10,
      "cacheReadTokens": 10,
      "date": "2026-01-03",
      "inputTokens": 93,
      "messageCount": 3,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 10,
          "cacheReadTokens": 10,
          "cost": 0.0016325,
          "inputTokens": 93,
          "modelName": "claude-opus-4.6",
          "outputTokens": 44
        }
      ],
      "modelsUsed": [
        "claude-opus-4.6"
      ],
      "outputTokens": 44,
      "totalCost": 0.0016325,
      "totalTokens": 157
    },
    {
      "cacheCreationTokens": 15,
      "cacheReadTokens": 10,
      "date": "2026-02-01",
      "inputTokens": 65,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 15,
          "cacheReadTokens": 10,
          "cost": 0.000661875,
          "inputTokens": 65,
          "modelName": "gpt-5.4",
          "outputTokens": 30
        }
      ],
      "modelsUsed": [
        "gpt-5.4"
      ],
      "outputTokens": 30,
      "totalCost": 0.000661875,
      "totalTokens": 120
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "date": "2026-02-02",
      "inputTokens": 7,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.0001375,
          "inputTokens": 7,
          "modelName": "gpt-5.4",
          "outputTokens": 8
        }
      ],
      "modelsUsed": [
        "gpt-5.4"
      ],
      "outputTokens": 8,
      "totalCost": 0.0001375,
      "totalTokens": 15
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "date": "2026-02-03",
      "inputTokens": 40,
      "messageCount": 2,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.06,
          "inputTokens": 0,
          "modelName": "unknown",
          "outputTokens": 0
        },
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.00025,
          "inputTokens": 40,
          "modelName": "gpt-5.4",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "gpt-5.4",
        "unknown"
      ],
      "outputTokens": 10,
      "totalCost": 0.06025,
      "totalTokens": 50
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "date": "2026-02-04",
      "inputTokens": 0,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.02,
          "inputTokens": 0,
          "modelName": "unknown",
          "outputTokens": 0
        }
      ],
      "modelsUsed": [
        "unknown"
      ],
      "outputTokens": 0,
      "totalCost": 0.02,
      "totalTokens": 0
    }
  ],
  "totals": {
    "cacheCreationTokens": 45,
    "cacheReadTokens": 30,
    "inputTokens": 275,
    "outputTokens": 142,
    "totalCost": 0.084411875,
    "totalTokens": 492
  }
}
