rust/crates/ccusage/tests/snapshots/copilot_cli__focused_daily_table.snap
---
source: crates/ccusage/tests/copilot_cli.rs
expression: "format!(\"Daily\\n{}\", run_cli(&fixture, [\"copilot\", \"daily\"]),)"
---
Daily
┌────────────┬───────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Date       │ Models        │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-01-02 │ - opus-4.6    │        70 │        50 │            20 │          10 │           150 │       $0.00 │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-01-03 │ - opus-4.6    │        93 │        44 │            10 │          10 │           157 │       $0.00 │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-02-01 │ - gpt-5.4     │        65 │        30 │            15 │          10 │           120 │       $0.00 │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-02-02 │ - gpt-5.4     │         7 │         8 │             0 │           0 │            15 │       $0.00 │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-02-03 │ - gpt-5.4     │        40 │        10 │             0 │           0 │            50 │       $0.06 │
│            │ - unknown     │           │           │               │             │               │             │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-02-04 │ - unknown     │         0 │         0 │             0 │           0 │             0 │       $0.02 │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total      │               │       275 │       142 │            45 │          30 │           492 │       $0.08 │
└────────────┴───────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘
