rust/crates/ccusage/tests/snapshots/copilot_cli__focused_monthly_and_session_json.snap
---
source: crates/ccusage/tests/copilot_cli.rs
expression: "format!(\"Monthly JSON\\n{}\\nSession JSON\\n{}\",\nrun_cli(&fixture, [\"copilot\", \"monthly\", \"--json\"]),\nrun_cli(&fixture, [\"copilot\", \"session\", \"--json\"]),)"
---
Monthly JSON
{
  "monthly": [
    {
      "cacheCreationTokens": 30,
      "cacheReadTokens": 20,
      "inputTokens": 163,
      "messageCount": 4,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 30,
          "cacheReadTokens": 20,
          "cost": 0.0033625,
          "inputTokens": 163,
          "modelName": "claude-opus-4.6",
          "outputTokens": 94
        }
      ],
      "modelsUsed": [
        "claude-opus-4.6"
      ],
      "month": "2026-01",
      "outputTokens": 94,
      "totalCost": 0.0033625,
      "totalTokens": 307
    },
    {
      "cacheCreationTokens": 15,
      "cacheReadTokens": 10,
      "inputTokens": 112,
      "messageCount": 3,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.08,
          "inputTokens": 0,
          "modelName": "unknown",
          "outputTokens": 0
        },
        {
          "cacheCreationTokens": 15,
          "cacheReadTokens": 10,
          "cost": 0.001049375,
          "inputTokens": 112,
          "modelName": "gpt-5.4",
          "outputTokens": 48
        }
      ],
      "modelsUsed": [
        "gpt-5.4",
        "unknown"
      ],
      "month": "2026-02",
      "outputTokens": 48,
      "totalCost": 0.08104937499999999,
      "totalTokens": 185
    }
  ],
  "totals": {
    "cacheCreationTokens": 45,
    "cacheReadTokens": 30,
    "inputTokens": 275,
    "outputTokens": 142,
    "totalCost": 0.084411875,
    "totalTokens": 492
  }
}

Session JSON
{
  "sessions": [
    {
      "cacheCreationTokens": 30,
      "cacheReadTokens": 20,
      "firstActivity": "2026-01-02T01:20:00.000Z",
      "inputTokens": 163,
      "lastActivity": "2026-01-03T02:20:00.000Z",
      "messageCount": 4,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 30,
          "cacheReadTokens": 20,
          "cost": 0.0033625,
          "inputTokens": 163,
          "modelName": "claude-opus-4.6",
          "outputTokens": 94
        }
      ],
      "modelsUsed": [
        "claude-opus-4.6"
      ],
      "outputTokens": 94,
      "projectPath": "GitHub Copilot CLI",
      "sessionId": "session-a",
      "totalCost": 0.0033625,
      "totalTokens": 307
    },
    {
      "cacheCreationTokens": 15,
      "cacheReadTokens": 10,
      "firstActivity": "2026-02-01T01:20:00.000Z",
      "inputTokens": 65,
      "lastActivity": "2026-02-01T01:20:00.000Z",
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 15,
          "cacheReadTokens": 10,
          "cost": 0.000661875,
          "inputTokens": 65,
          "modelName": "gpt-5.4",
          "outputTokens": 30
        }
      ],
      "modelsUsed": [
        "gpt-5.4"
      ],
      "outputTokens": 30,
      "projectPath": "GitHub Copilot CLI",
      "sessionId": "session-b",
      "totalCost": 0.000661875,
      "totalTokens": 120
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "firstActivity": "2026-02-02T01:20:00.000Z",
      "inputTokens": 7,
      "lastActivity": "2026-02-02T01:20:00.000Z",
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.0001375,
          "inputTokens": 7,
          "modelName": "gpt-5.4",
          "outputTokens": 8
        }
      ],
      "modelsUsed": [
        "gpt-5.4"
      ],
      "outputTokens": 8,
      "projectPath": "GitHub Copilot CLI",
      "sessionId": "session-c",
      "totalCost": 0.0001375,
      "totalTokens": 15
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "firstActivity": "2026-02-03T02:00:00.000Z",
      "inputTokens": 40,
      "lastActivity": "2026-02-04T01:00:00.000Z",
      "messageCount": 2,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.08,
          "inputTokens": 0,
          "modelName": "unknown",
          "outputTokens": 0
        },
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.00025,
          "inputTokens": 40,
          "modelName": "gpt-5.4",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "gpt-5.4",
        "unknown"
      ],
      "outputTokens": 10,
      "projectPath": "GitHub Copilot CLI",
      "sessionId": "session-credits",
      "totalCost": 0.08025,
      "totalTokens": 50
    }
  ],
  "totals": {
    "cacheCreationTokens": 45,
    "cacheReadTokens": 30,
    "inputTokens": 275,
    "outputTokens": 142,
    "totalCost": 0.084411875,
    "totalTokens": 492
  }
}
