rust/crates/ccusage/tests/snapshots/copilot_cli__focused_monthly_and_session_table.snap
---
source: crates/ccusage/tests/copilot_cli.rs
expression: "format!(\"Monthly\\n{}\\n\\nSession\\n{}\",\nrun_cli(&fixture, [\"copilot\", \"monthly\"]),\nrun_cli(&fixture, [\"copilot\", \"session\"]),)"
---
Monthly
┌──────────┬───────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Month    │ Models        │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├──────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-01  │ - opus-4.6    │       163 │        94 │            30 │          20 │           307 │       $0.00 │
├──────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-02  │ - gpt-5.4     │       112 │        48 │            15 │          10 │           185 │       $0.08 │
│          │ - unknown     │           │           │               │             │               │             │
├──────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total    │               │       275 │       142 │            45 │          30 │           492 │       $0.08 │
└──────────┴───────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘


Session
┌──────────┬───────────────┬───────────┬───────────┬─────────────┬────────────┬────────────┬────────────┬──────────────┐
│ Session  │ Models        │     Input │    Output │       Cache │ Cache Read │      Total │ Cost (USD) │ Last         │
│          │               │           │           │      Create │            │     Tokens │            │ Activity     │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ session… │ - opus-4.6    │       163 │        94 │          30 │         20 │        307 │      $0.00 │ 2026-01-03   │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ session… │ - gpt-5.4     │        65 │        30 │          15 │         10 │        120 │      $0.00 │ 2026-02-01   │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ session… │ - gpt-5.4     │         7 │         8 │           0 │          0 │         15 │      $0.00 │ 2026-02-02   │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ session… │ - gpt-5.4     │        40 │        10 │           0 │          0 │         50 │      $0.08 │ 2026-02-04   │
│          │ - unknown     │           │           │             │            │            │            │              │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ Total    │               │       275 │       142 │          45 │         30 │        492 │      $0.08 │              │
└──────────┴───────────────┴───────────┴───────────┴─────────────┴────────────┴────────────┴────────────┴──────────────┘
