rust/crates/ccusage/tests/snapshots/copilot_cli__unified_monthly_and_session_json.snap
---
source: crates/ccusage/tests/copilot_cli.rs
expression: "format!(\"Monthly JSON\\n{}\\nSession JSON\\n{}\",\nrun_cli(&fixture, [\"monthly\", \"--json\"]),\nrun_cli(&fixture, [\"session\", \"--json\"]),)"
---
Monthly JSON
{
  "monthly": [
    {
      "agent": "all",
      "cacheCreationTokens": 30,
      "cacheReadTokens": 20,
      "inputTokens": 163,
      "metadata": {
        "agents": [
          "copilot"
        ]
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 30,
          "cacheReadTokens": 20,
          "cost": 0.0033625,
          "inputTokens": 163,
          "modelName": "claude-opus-4.6",
          "outputTokens": 94
        }
      ],
      "modelsUsed": [
        "claude-opus-4.6"
      ],
      "outputTokens": 94,
      "period": "2026-01",
      "totalCost": 0.0033625,
      "totalTokens": 307
    },
    {
      "agent": "all",
      "cacheCreationTokens": 15,
      "cacheReadTokens": 10,
      "inputTokens": 112,
      "metadata": {
        "agents": [
          "copilot"
        ]
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.06,
          "inputTokens": 0,
          "modelName": "unknown",
          "outputTokens": 0
        },
        {
          "cacheCreationTokens": 15,
          "cacheReadTokens": 10,
          "cost": 0.001049375,
          "inputTokens": 112,
          "modelName": "gpt-5.4",
          "outputTokens": 48
        }
      ],
      "modelsUsed": [
        "gpt-5.4",
        "unknown"
      ],
      "outputTokens": 48,
      "period": "2026-02",
      "totalCost": 0.061049374999999996,
      "totalTokens": 185
    }
  ],
  "totals": {
    "cacheCreationTokens": 45,
    "cacheReadTokens": 30,
    "inputTokens": 275,
    "outputTokens": 142,
    "totalCost": 0.064411875,
    "totalTokens": 492
  }
}

Session JSON
{
  "session": [
    {
      "agent": "copilot",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "inputTokens": 40,
      "metadata": {
        "lastActivity": "2026-02-04T01:00:00.000Z"
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.08,
          "inputTokens": 0,
          "modelName": "unknown",
          "outputTokens": 0
        },
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.00025,
          "inputTokens": 40,
          "modelName": "gpt-5.4",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "gpt-5.4",
        "unknown"
      ],
      "outputTokens": 10,
      "period": "session-credits",
      "totalCost": 0.08025,
      "totalTokens": 50
    },
    {
      "agent": "copilot",
      "cacheCreationTokens": 30,
      "cacheReadTokens": 20,
      "inputTokens": 163,
      "metadata": {
        "lastActivity": "2026-01-03T02:20:00.000Z"
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 30,
          "cacheReadTokens": 20,
          "cost": 0.0033625,
          "inputTokens": 163,
          "modelName": "claude-opus-4.6",
          "outputTokens": 94
        }
      ],
      "modelsUsed": [
        "claude-opus-4.6"
      ],
      "outputTokens": 94,
      "period": "session-a",
      "totalCost": 0.0033625,
      "totalTokens": 307
    },
    {
      "agent": "copilot",
      "cacheCreationTokens": 15,
      "cacheReadTokens": 10,
      "inputTokens": 65,
      "metadata": {
        "lastActivity": "2026-02-01T01:20:00.000Z"
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 15,
          "cacheReadTokens": 10,
          "cost": 0.000661875,
          "inputTokens": 65,
          "modelName": "gpt-5.4",
          "outputTokens": 30
        }
      ],
      "modelsUsed": [
        "gpt-5.4"
      ],
      "outputTokens": 30,
      "period": "session-b",
      "totalCost": 0.000661875,
      "totalTokens": 120
    },
    {
      "agent": "copilot",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "inputTokens": 7,
      "metadata": {
        "lastActivity": "2026-02-02T01:20:00.000Z"
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.0001375,
          "inputTokens": 7,
          "modelName": "gpt-5.4",
          "outputTokens": 8
        }
      ],
      "modelsUsed": [
        "gpt-5.4"
      ],
      "outputTokens": 8,
      "period": "session-c",
      "totalCost": 0.0001375,
      "totalTokens": 15
    }
  ],
  "totals": {
    "cacheCreationTokens": 45,
    "cacheReadTokens": 30,
    "inputTokens": 275,
    "outputTokens": 142,
    "totalCost": 0.08441187500000001,
    "totalTokens": 492
  }
}
