rust/crates/ccusage/tests/snapshots/copilot_cli__unified_monthly_and_session_table.snap
---
source: crates/ccusage/tests/copilot_cli.rs
expression: "format!(\"Monthly\\n{}\\n\\nSession\\n{}\", run_cli(&fixture, [\"monthly\"]),\nrun_cli(&fixture, [\"session\"]),)"
---
Monthly
┌──────────┬───────────────┬───────────────┬───────────┬───────────┬────────────┬────────────┬────────────┬────────────┐
│ Month    │ Agent         │ Models        │     Input │    Output │      Cache │ Cache Read │      Total │ Cost (USD) │
│          │               │               │           │           │     Create │            │     Tokens │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ 2026-01  │ All           │               │       163 │        94 │         30 │         20 │        307 │      $0.00 │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│          │ - GitHub      │ - opus-4.6    │       163 │        94 │         30 │         20 │        307 │      $0.00 │
│          │ Copilot CLI   │               │           │           │            │            │            │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ 2026-02  │ All           │               │       112 │        48 │         15 │         10 │        185 │      $0.08 │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│          │ - GitHub      │ - gpt-5.4     │       112 │        48 │         15 │         10 │        185 │      $0.08 │
│          │ Copilot CLI   │ - unknown     │           │           │            │            │            │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ Total    │               │               │       275 │       142 │         45 │         30 │        492 │      $0.08 │
└──────────┴───────────────┴───────────────┴───────────┴───────────┴────────────┴────────────┴────────────┴────────────┘


Session
┌──────────┬───────────────┬───────────────┬───────────┬───────────┬────────────┬────────────┬────────────┬────────────┐
│ Session  │ Agent         │ Models        │     Input │    Output │      Cache │ Cache Read │      Total │ Cost (USD) │
│          │               │               │           │           │     Create │            │     Tokens │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ session… │ GitHub        │ - gpt-5.4     │        40 │        10 │          0 │          0 │         50 │      $0.08 │
│          │ Copilot CLI   │ - unknown     │           │           │            │            │            │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ session… │ GitHub        │ - opus-4.6    │       163 │        94 │         30 │         20 │        307 │      $0.00 │
│          │ Copilot CLI   │               │           │           │            │            │            │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ session… │ GitHub        │ - gpt-5.4     │        65 │        30 │         15 │         10 │        120 │      $0.00 │
│          │ Copilot CLI   │               │           │           │            │            │            │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ session… │ GitHub        │ - gpt-5.4     │         7 │         8 │          0 │          0 │         15 │      $0.00 │
│          │ Copilot CLI   │               │           │           │            │            │            │            │
├──────────┼───────────────┼───────────────┼───────────┼───────────┼────────────┼────────────┼────────────┼────────────┤
│ Total    │               │               │       275 │       142 │         45 │         30 │        492 │      $0.08 │
└──────────┴───────────────┴───────────────┴───────────┴───────────┴────────────┴────────────┴────────────┴────────────┘
